--- a/scholarship.html
+++ b/scholarship.html
@@ -9,7 +9,7 @@ body
 table{background-color:"plum"; } 
 </style>
 <table border=1 bordercolor=purple cellpadding=10>
-<tr><th><a href=home.html>Back</a></th></tr></table>
+<tr><th><a href=index.html>Back</a></th></tr></table>
 <H2> Scholarship Distribution:-</H2>               
 We have distributed scholarship more then 3.2 crore  
 Govt. Scholarship – 
