--- a/studenthelp.html
+++ b/studenthelp.html
@@ -8,7 +8,7 @@ body
 { background-color:"#F0FFF0";}        
 </style> 
 <table border=1 bordercolor=purple cellpadding=10>
-<tr><th><a href=home.html>Back</a></th></tr></table>
+<tr><th><a href=index.html>Back</a></th></tr></table>
 <h2>
 <font color="blue">   
 How can we know   Which Course and College   are suitable for us ??--- 
