--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ D.A.V. College | HomePage
 <IMG SRC="2.jpg" WIDTH="150" HEIGHT="200" ALIGN="LEFT"/>   
 <img src="1.jpg" width="1080" height="200"/> 
 <table width="100%" border="1"><tr>         
-<th><A HREF="index.HTML"><font color=Orange>HOME</font></A></th>   
-<th><A HREF="login.HTML"><font color=Green>LOGIN</font></A></th>       
-<th><A HREF="ABOUTUS.HTML"><font color=green>ABOUT US</font></A></th>  <th><A HREF="DEPARTMENT.HTML"><font color=green>DEPARTMENT</font></A></TH>  
-<th><A HREF="photos.HTML"><font color=green>PHOTO GALLERY</font></A></th>  
-<th><A HREF="COURSES.HTml"><font color=green>COURSES</font></A></th>
+<th><A HREF="index.html"><font color=Orange>HOME</font></A></th>   
+<th><A HREF="login.html"><font color=Green>LOGIN</font></A></th>       
+<th><A HREF="ABOUTUS.html"><font color=green>ABOUT US</font></A></th>  <th><A HREF="DEPARTMENT.HTML"><font color=green>DEPARTMENT</font></A></TH>  
+<th><A HREF="photos.html"><font color=green>PHOTO GALLERY</font></A></th>  
+<th><A HREF="COURSES.html"><font color=green>COURSES</font></A></th>
 </table>
 <br><BR><BR><table cellpadding=30 border=2 align=right hspace=30 vspace=20>
 <tr>
