--- a/department.html
+++ b/department.html
@@ -8,11 +8,11 @@
 <IMG SRC="2.jpg" WIDTH="150" HEIGHT="200" ALIGN="LEFT"/>   
 <img src="1.jpg" width="1080" height="200"/> 
 <table width="100%" border="1"><tr>         
-<th><A HREF="index.HTML"><font color=green>HOME</font></A></th>   
-<th><A HREF="login.HTML"><font color=Green>LOGIN</font></A></th>       
-<th><A HREF="ABOUTUS.HTML"><font color=green>ABOUT US</font></A></th>  <th><A HREF="DEPARTMENT.HTML"><font color=Orange>DEPARTMENT</font></A></TH>  
-<th><A HREF="photos.HTML"><font color=green>PHOTO GALLERY</font></A></th>  
-<th><A HREF="COURSES.HTml"><font color=green>COURSES</font></A></th>
+<th><A HREF="index.html"><font color=green>HOME</font></A></th>   
+<th><A HREF="login.html"><font color=Green>LOGIN</font></A></th>       
+<th><A HREF="aboutus.html"><font color=green>ABOUT US</font></A></th>  <th><A HREF="department.html"><font color=Orange>DEPARTMENT</font></A></TH>  
+<th><A HREF="photos.html"><font color=green>PHOTO GALLERY</font></A></th>  
+<th><A HREF="courses.html"><font color=green>COURSES</font></A></th>
 </table>
 
 <IMG SRC="12.JPG" WIDTH="100%" HEIGHT="250"/> 
@@ -22,28 +22,28 @@
 <tr> 
 <tD>
 <B>
-<A HREF="department1.HTML"><font color=Green>COMPUTER SCIENCE DEPARTMENT</font></A>
+<A HREF="department1.html"><font color=Green>COMPUTER SCIENCE DEPARTMENT</font></A>
 </B>
 </tD> 
 </tr> 
 <tr> 
 <tD>
 <B>
-<A HREF="department2.HTML"><font color=Green>COMMERCE DEPARTMENT</font></A>
+<A HREF="department2.html"><font color=Green>COMMERCE DEPARTMENT</font></A>
 </B> 
 </tD> 
 </TR> 
 <TR> 
 <tD>
 <B>
-<A HREF="department3.HTML"><font color=Green>BIO SCIENCE DEPARTMENT</font></A>
+<A HREF="department3.html"><font color=Green>BIO SCIENCE DEPARTMENT</font></A>
 </B>
 </tD> 
 </TR> 
 <TR> 
 <tD>
 <B>
-<A HREF="department4.HTML"><font color=Green>MANAGEMENT DEPARTMENT</font></A>
+<A HREF="department4.html"><font color=Green>MANAGEMENT DEPARTMENT</font></A>
 </B>
 </tD> 
 </TR> 
