--- a/aboutus.html
+++ b/aboutus.html
@@ -10,11 +10,11 @@ D.A.V. College | ABOUT US
 <IMG SRC="2.jpg" WIDTH="150" HEIGHT="200" ALIGN="LEFT"/>   
 <img src="1.jpg" width="1080" height="200"/> 
 <table width="100%" border="1"><tr>         
-<th><A HREF="index.HTML"><font color=green>HOME</font></A></th>   
-<th><A HREF="login.HTML"><font color=Green>LOGIN</font></A></th>       
-<th><A HREF="ABOUTUS.HTML"><font color=orange>ABOUT US</font></A></th>  <th><A HREF="DEPARTMENT.HTML"><font color=green>DEPARTMENT</font></A></TH>  
-<th><A HREF="photos.HTML"><font color=green>PHOTO GALLERY</font></A></th>  
-<th><A HREF="COURSES.HTml"><font color=green>COURSES</font></A></th>
+<th><A HREF="index.html"><font color=green>HOME</font></A></th>   
+<th><A HREF="login.html"><font color=Green>LOGIN</font></A></th>       
+<th><A HREF="aboutus.html"><font color=orange>ABOUT US</font></A></th>  <th><A HREF="department.html"><font color=green>DEPARTMENT</font></A></TH>  
+<th><A HREF="photos.html"><font color=green>PHOTO GALLERY</font></A></th>  
+<th><A HREF="courses.HTml"><font color=green>COURSES</font></A></th>
 </table>
 <img src="3.jpg" width="300" height="250" align="right"/>
 <h2>
