--- a/department3.html
+++ b/department3.html
@@ -1,4 +1,4 @@
-<HTML>  
+<html>  
 <head>      
 <TITLE>D.A.V. College | Department 
 </TITLE>  
@@ -8,11 +8,11 @@
 <IMG SRC="2.jpg" WIDTH="150" HEIGHT="200" ALIGN="LEFT"/>   
 <img src="1.jpg" width="1080" height="200"/> 
 <table width="100%" border="1"><tr>         
-<th><A HREF="index.HTML"><font color=green>HOME</font></A></th>   
-<th><A HREF="login.HTML"><font color=Green>LOGIN</font></A></th>       
-<th><A HREF="ABOUTUS.HTML"><font color=green>ABOUT US</font></A></th>  <th><A HREF="DEPARTMENT.HTML"><font color=orange>DEPARTMENT</font></A></TH>  
-<th><A HREF="photos.HTML"><font color=green>PHOTO GALLERY</font></A></th>  
-<th><A HREF="COURSES.HTml"><font color=green>COURSES</font></A></th>
+<th><A HREF="index.html"><font color=green>HOME</font></A></th>   
+<th><A HREF="login.html"><font color=Green>LOGIN</font></A></th>       
+<th><A HREF="aboutus.html"><font color=green>ABOUT US</font></A></th>  <th><A HREF="department.html"><font color=orange>DEPARTMENT</font></A></TH>  
+<th><A HREF="photos.html"><font color=green>PHOTO GALLERY</font></A></th>  
+<th><A HREF="courses.html"><font color=green>COURSES</font></A></th>
 </table>
 
 <IMG SRC="12.JPG" WIDTH="100%" HEIGHT="250"/> 
@@ -37,4 +37,4 @@ THAT WEBSITE IS DESIGNED BY Mohit ( BCA Sem 2)
 </MARQUEE>   
  
 </BODY> 
-</HTML>
+</html>
