--- a/login2.html
+++ b/login2.html
@@ -1,4 +1,4 @@
-<HTML>
+<html>
 <HEAD><TITLE>D.A.V. College | Login</TITLE></HEAD>
 <SCRIPT>
 function validateform()
@@ -27,11 +27,11 @@ return false;
 <br>
 <table width="100%" border="1">
 <tr>         
-<th><A HREF="index.HTML"><font color=green>HOME</font></A></th>   
-<th><A HREF="login.HTML"><font color=orange>LOGIN</font></A></th>       
-<th><A HREF="ABOUTUS.HTML"><font color=green>ABOUT US</font></A></th>  <th><A HREF="DEPARTMENT.HTML"><font color=green>DEPARTMENT</font></A></TH>  
-<th><A HREF="photos.HTML"><font color=green>PHOTO GALLERY</font></A></th>  
-<th><A HREF="COURSES.HTml"><font color=green>COURSES</font></A></th>
+<th><A HREF="index.html"><font color=green>HOME</font></A></th>   
+<th><A HREF="login.html"><font color=orange>LOGIN</font></A></th>       
+<th><A HREF="aboutus.html"><font color=green>ABOUT US</font></A></th>  <th><A HREF="department.html"><font color=green>DEPARTMENT</font></A></TH>  
+<th><A HREF="photos.html"><font color=green>PHOTO GALLERY</font></A></th>  
+<th><A HREF="courses.html"><font color=green>COURSES</font></A></th>
 </tr>
 </table>
 <br><br><br><br><br>
@@ -54,4 +54,4 @@ return false;
 </form>
 <font face="comic sans ms" size=6 color=navy align=center><a href=login.html >Staff Login Here</a></font>
 </body>
-</HTML>
+</html>
