--- a/photos.html
+++ b/photos.html
@@ -15,11 +15,11 @@ table
 <IMG SRC="2.jpg" WIDTH="150" HEIGHT="200" ALIGN="LEFT"/>   
 <img src="1.jpg" width="1080" height="200"/> 
 <table width="100%" border="1"><tr>         
-<th><A HREF="index.HTML"><font color=green>HOME</font></A></th>   
-<th><A HREF="login.HTML"><font color=Green>LOGIN</font></A></th>       
-<th><A HREF="ABOUTUS.HTML"><font color=green>ABOUT US</font></A></th>  <th><A HREF="DEPARTMENT.HTML"><font color=green>DEPARTMENT</font></A></TH>  
-<th><A HREF="photos.HTML"><font color=orange>PHOTO GALLERY</font></A></th>  
-<th><A HREF="COURSES.HTml"><font color=green>COURSES</font></A></th>
+<th><A HREF="index.html"><font color=green>HOME</font></A></th>   
+<th><A HREF="login.html"><font color=Green>LOGIN</font></A></th>       
+<th><A HREF="aboutus.html"><font color=green>ABOUT US</font></A></th>  <th><A HREF="department.html"><font color=green>DEPARTMENT</font></A></TH>  
+<th><A HREF="photos.html"><font color=orange>PHOTO GALLERY</font></A></th>  
+<th><A HREF="courses.html"><font color=green>COURSES</font></A></th>
 </table>
 <table border=1 bordercolor=purple cellpadding=60 cellspacing=40>
 <tr>
@@ -50,5 +50,5 @@ table
 <th><img src=66.jpg height=320 width=480></th>
 </tr>
 </BODY> 
-</HTML> 
+</html> 
  
