--- a/department.html
+++ b/department.html
@@ -15,9 +15,9 @@
 <th><A HREF="courses.html"><font color=green>COURSES</font></A></th>
 </table>
 
-<IMG SRC="12.JPG" WIDTH="100%" HEIGHT="250"/> 
+<IMG SRC="12.jpg" WIDTH="100%" HEIGHT="250"/> 
 <HR/> 
-<IMG SRC="13.JPG" WIDTH="75%" HEIGHT="250"/ ALIGN="RIGHT"> 
+<IMG SRC="13.jpg" WIDTH="75%" HEIGHT="250"/ ALIGN="RIGHT"> 
 <table border="1" WIDTH="250" HEIGHT="250"> 
 <tr> 
 <tD>
