--- a/department2.html
+++ b/department2.html
@@ -15,7 +15,7 @@
 <th><A HREF="courses.html"><font color=green>COURSES</font></A></th>
 </table>
 
-<IMG SRC="12.JPG" WIDTH="100%" HEIGHT="250"/> 
+<IMG SRC="12.jpg" WIDTH="100%" HEIGHT="250"/> 
 <HR/> 
 <br>
 <table border=1 bordercolor=purple cellpadding=10>
@@ -25,7 +25,7 @@
 </table>
 <br>
 <font align="Center" color=blue size=8 face="comic sans ms">Commerce Department</font><br>
-<font face="comic sans ms" align=center>The Department of commerce is the nodal agency for formulation of policies for increasing the export of the country in various commodities. The mandate of the Department of Commerce is regulation, development and promotion of India’s international trade and commerce through formulation of appropriate
+<font face="comic sans ms" align=center>The Department of commerce is the nodal agency for formulation of policies for increasing the export of the country in various commodities. The mandate of the Department of Commerce is regulation, development and promotion of Indiaâ€™s international trade and commerce through formulation of appropriate
 international trade & commercial policy and implementation of the various provisions thereof. The basic role of the Department is to facilitate the creation of an enabling environment and infrastructure for accelerated growth of international trade. The Department formulates, implements and monitors the Foreign Trade Policy which provides the basic framework of policy and strategy to be followed for promoting exports and trade. The Trade Policy is periodically reviewed to incorporate changes necessary to take care of emerging economic scenarios both in the domestic and international economy. Besides, the Department is also entrusted with responsibilities relating to multilateral and bilateral commercial relations, Special Economic Zones, state trading,
 </font>
 
