--- a/department3.html
+++ b/department3.html
@@ -15,7 +15,7 @@
 <th><A HREF="courses.html"><font color=green>COURSES</font></A></th>
 </table>
 
-<IMG SRC="12.JPG" WIDTH="100%" HEIGHT="250"/> 
+<IMG SRC="12.jpg" WIDTH="100%" HEIGHT="250"/> 
 <HR/> 
 <br>
 <table border=1 bordercolor=purple cellpadding=10>
